--- a/Intensive/Z-Tests/hypothesis_testing.ipynb
+++ b/Intensive/Z-Tests/hypothesis_testing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
     "hidden": true
    },
    "source": [
-    "![img1](../images/img1.png)"
+    "![img1](images/img1.png)"
    ]
   },
   {
@@ -293,7 +293,7 @@
     "hidden": true
    },
    "source": [
-    "![img2](../images/img2.png)"
+    "![img2](images/img2.png)"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "\n",
     "Seems unlikely that these students aren't a special subset of the student population.\n",
     "\n",
-    "<img src=\"../images/normal_sd_new.png\" width=\"500\">\n",
+    "<img src=\"images/normal_sd_new.png\" width=\"500\">\n",
     " "
    ]
   },
@@ -640,6 +640,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Null: The scores did not differ from those who took the test with or without admin in the room.\n",
+    "    \n",
+    "##Alternative:The scores from the students who took the exam with an admin in the room differed from those not in the room."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "hidden": true
@@ -660,6 +671,17 @@
    },
    "source": [
     "4. A pest control company believes that the length of cockroach legs in colonies which have persisted after two or more insecticide treatements are longer than those in colonies which have not been treated with insecticide."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Null:The legs of the cockroaches legs that persisted after two or more treatments were not longer than those who had not been treated with insecticide\n",
+    "\n",
+    "##Alternative: The legs ... were longer than..."
    ]
   },
   {
@@ -684,6 +706,17 @@
    },
    "source": [
     "5. A healthcare company believes patients between the ages of 18 and 25 participate in annual checkups less than all other age groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Null: Patients bw ages of 18-25 do not participate less in annual checkups than other age groups\n",
+    "\n",
+    "##Alternative: Patients bw ages of 18-25 did partipate less than other age groups in annual checkups"
    ]
   },
   {
@@ -1131,11 +1164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n"
+     ]
+    }
+   ],
    "source": [
     "z_score = (75 - 65)/4\n",
     "print(z_score)"
@@ -1185,11 +1226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3499999999999943"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_female_heights = [68, 65, 69, 70, 70, \n",
     "                         61, 59, 65, 64, 66,\n",
@@ -1208,11 +1260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9906132944651613\n",
+      "0.009386705534838714\n"
+     ]
+    }
+   ],
    "source": [
     "# we can use stats to calculate the percentile\n",
     "print(stats.norm.cdf(z))\n",
@@ -1307,12 +1368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "alpha = 0.05"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1335,11 +1398,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142.30249470757707"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "se = 900 / np.sqrt(40)\n",
     "se"
@@ -1358,11 +1432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.5509486999297257"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_bar = 8637\n",
     "mu = 9000\n",
@@ -1374,15 +1459,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
    "source": [
     "# Now we get our p-value from the test statistic:\n",
-    "stats.norm.cdf(z)"
+    "p = stats.norm.cdf(z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p < alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1409,7 +1528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
