--- a/Intensive/T-Tests/hypothesis_testing.ipynb
+++ b/Intensive/T-Tests/hypothesis_testing.ipynb
@@ -12,7 +12,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Goal - check whether a sample belongs to a population\\nSteps:\\n    - Stating null and alternative hypothesis \\n    - Setting a threshold alpha value -> alpha value is the amount of random luck that you are willing to tolerate\\n    \\n    \\n    \\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Steps for performing a Z-Test\n",
+    "\"\"\"Goal - check whether a sample belongs to a population\n",
+    "Steps:\n",
+    "    - Stating null and alternative hypothesis \n",
+    "    - Setting a threshold alpha value -> alpha value is the amount of random luck that you are willing to tolerate\n",
+    "    - Calculating the Z statistic (formula is given in lecture notes) \n",
+    "    - p-value definition -> probability of seeing the results you are seeing due to random luck given \n",
+    "    that the null hypothesis is true\n",
+    "    - If P is smaller than alpha then you reject the null hypothesis \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +212,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Testing for high Blood Sugar for a patient\n",
+    "\n",
+    "Null: The patient does not have high blood sugar \n",
+    "Alternative: The patient does have high blood sugar\n",
+    "\n",
+    "Type 1 Error: The test states the patient does have high blood sugar, but they do not have high blood sugar. \n",
+    "Type 2 Error: The test states the patient does not have high blood sugar, but they do have it.\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true,
@@ -226,6 +273,24 @@
    },
    "source": [
     "Generally, we want our false negative rate $\\beta$ to be about $20\\%$ but again it depends on the application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Criminal court system - Judge decising on a trail\n",
+    "Null: The criminal is not guilty\n",
+    "Alternative: THe criminal is guilty\n",
+    "\n",
+    "\n",
+    "Type 1 Error:Saying they committed it but they did not\n",
+    "Type 2 Error:Saying they did not commit crime when they did \n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -351,7 +416,16 @@
     "hidden": true
    },
    "source": [
-    "<img src=\"img/z_or_t_test.png\" width=\"500\">"
+    "<img src=\"images/z_or_t_test.png\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Know population STD? NO T TEST -> Is sample size greater than 30? NO T TEST, YES Z Test"
    ]
   },
   {
@@ -396,7 +470,7 @@
    },
    "source": [
     "\n",
-    "<img src=\"img/img5.png\" width=\"500\">"
+    "<img src=\"images/img5.png\" width=\"500\">"
    ]
   },
   {
@@ -428,12 +502,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "hidden": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ttest_1samp in module scipy.stats.stats:\n",
+      "\n",
+      "ttest_1samp(a, popmean, axis=0, nan_policy='propagate')\n",
+      "    Calculate the T-test for the mean of ONE group of scores.\n",
+      "    \n",
+      "    This is a two-sided test for the null hypothesis that the expected value\n",
+      "    (mean) of a sample of independent observations `a` is equal to the given\n",
+      "    population mean, `popmean`.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Sample observation.\n",
+      "    popmean : float or array_like\n",
+      "        Expected value in null hypothesis. If array_like, then it must have the\n",
+      "        same shape as `a` excluding the axis dimension.\n",
+      "    axis : int or None, optional\n",
+      "        Axis along which to compute test. If None, compute over the whole\n",
+      "        array `a`.\n",
+      "    nan_policy : {'propagate', 'raise', 'omit'}, optional\n",
+      "        Defines how to handle when input contains nan.\n",
+      "        The following options are available (default is 'propagate'):\n",
+      "    \n",
+      "          * 'propagate': returns nan\n",
+      "          * 'raise': throws an error\n",
+      "          * 'omit': performs the calculations ignoring nan values\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    statistic : float or array\n",
+      "        t-statistic.\n",
+      "    pvalue : float or array\n",
+      "        Two-sided p-value.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> from scipy import stats\n",
+      "    \n",
+      "    >>> np.random.seed(7654567)  # fix seed to get the same result\n",
+      "    >>> rvs = stats.norm.rvs(loc=5, scale=10, size=(50,2))\n",
+      "    \n",
+      "    Test if mean of random sample is equal to true mean, and different mean.\n",
+      "    We reject the null hypothesis in the second case and don't reject it in\n",
+      "    the first case.\n",
+      "    \n",
+      "    >>> stats.ttest_1samp(rvs,5.0)\n",
+      "    (array([-0.68014479, -0.04323899]), array([ 0.49961383,  0.96568674]))\n",
+      "    >>> stats.ttest_1samp(rvs,0.0)\n",
+      "    (array([ 2.77025808,  4.11038784]), array([ 0.00789095,  0.00014999]))\n",
+      "    \n",
+      "    Examples using axis and non-scalar dimension for population mean.\n",
+      "    \n",
+      "    >>> stats.ttest_1samp(rvs,[5.0,0.0])\n",
+      "    (array([-0.68014479,  4.11038784]), array([  4.99613833e-01,   1.49986458e-04]))\n",
+      "    >>> stats.ttest_1samp(rvs.T,[5.0,0.0],axis=1)\n",
+      "    (array([-0.68014479,  4.11038784]), array([  4.99613833e-01,   1.49986458e-04]))\n",
+      "    >>> stats.ttest_1samp(rvs,[[5.0],[0.0]])\n",
+      "    (array([[-0.68014479, -0.04323899],\n",
+      "           [ 2.77025808,  4.11038784]]), array([[  4.99613833e-01,   9.65686743e-01],\n",
+      "           [  7.89094663e-03,   1.49986458e-04]]))\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(stats.ttest_1samp)"
    ]
@@ -489,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "hidden": true
    },
@@ -506,11 +648,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample mean: 8562.0\n",
+      "Sample std: 288.7\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Sample mean: {np.mean(gab):.1f}')\n",
     "print(f'Sample std: {np.std(gab):.1f}')"
@@ -518,11 +669,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-6.614120615780001, pvalue=2.498214901380137e-06)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using Python to perform test\n",
     "result = stats.ttest_1samp(gab, 9000)\n",
@@ -562,11 +724,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.785944569870411"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's continue to assume our alpha is 0.05\n",
     "x_bar = 8562\n",
@@ -580,11 +753,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.7291328115213678"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate our t-critical value t*\n",
     "stats.t.ppf(0.05, n-1)"
@@ -653,7 +837,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your Answer Here"
+    "# Your Answer Here\n",
+    "#NULL: There is no difference between theie lattes before and after the move\n",
+    "\n",
+    "#Alternative: There is a difference between the lattes before and after the move"
    ]
   },
   {
@@ -679,11 +866,154 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## We know it is t-score because it is less than 30 samples "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.63636363636363"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_bar = 4.6\n",
+    "mu = 4.0\n",
+    "s = 0.22\n",
+    "n = 25\n",
+    "t_stat = ((x_bar - mu)/(s/np.sqrt(n)))\n",
+    "t_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-score: 13.63636363636363\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "pop_mean = 4\n",
+    "sample_mean = 4.6\n",
+    "sample_std = 0.22\n",
+    "n = 25\n",
+    "\n",
+    "t_score = (sample_mean - pop_mean) / (sample_std / np.sqrt(n))\n",
+    "print(\"t-score:\", t_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00020833333333333335"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.01\n",
+    "df = n-1\n",
+    "t_critical = (alpha/2)/df\n",
+    "t_critical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Critical t-value: 2.796939504772804\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.01\n",
+    "df = n - 1  # degrees of freedom\n",
+    "t_critical = stats.t.ppf(1 - alpha/2, df)\n",
+    "print(\"Critical t-value:\", t_critical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject the null hypothesis\n",
+      "p-value:  4.242714627951655e-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "if abs(t_score) > t_critical:\n",
+    "    print(\"Reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis\")\n",
+    "    \n",
+    "print(\"p-value: \", stats.t(df).sf(t_stat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-statistic:  13.63636363636363\n",
+      "critical t-value:  2.796939504772804\n",
+      "p-value:  4.242714627951655e-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_stat = (4.6 - 4) / (0.22 / np.sqrt(25))\n",
+    "# This is a two-tailed test, so we want 1/2 of the 1% for\n",
+    "# the right tail and 1/2 for the left tail.\n",
+    "t_crit = stats.t.ppf(0.995, df=24)\n",
+    "print(\"t-statistic: \", t_stat)\n",
+    "print(\"critical t-value: \", t_crit)\n",
+    "print(\"p-value: \", stats.t(df=24).sf(t_stat))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -720,7 +1050,9 @@
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Brooylyn lattes are different "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -807,12 +1139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-2.56934288148538, pvalue=0.03022035629578255)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pant_prices = [20,30,30,50,75,25,30,30,40,80]\n",
+    "stats.ttest_1samp(pant_prices,58)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1484,7 +1830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
